fixed horizontal scroll

--- a/src/index.css
+++ b/src/index.css
@@ -16,7 +16,6 @@ html {
 html body {
   padding: 0;
   margin: 0;
-  overflow-x: inherit;
 }
 
 code {
